Added Responsive Design

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="content three" id="slide3">
             <h2>Links</h2>
-            <div class="row row-cols-1 row-cols-xl-4 row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+            <div class="row row-cols-2 row-cols-xl-4 row-cols-lg-3 row-cols-md-3 row-cols-sm-3">
                 <a class="link col" href="https://www.youtube.com/channel/UCdAQ8LDKsNtTLSjxwkns8FQ" target="_blank">
                     <i class="fa-brands fa-youtube"></i>
                     <h3>YouTube</h3>
@@ -94,7 +94,8 @@
             <div class="container">
                 <p>© 2023 JDL_PIXEL</p>
                 <a href="#">Impressum</a>
-                <a href="#">Datenschutz</a>
+                <a href="#">Datenschutz</a><br>
+                <a href="https://creepercraft.me" target="_blank">Developed by Creeper_craft</a>
             </div>
         </footer>
     </div>
